--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "framer-motion": "^12.6.2",
         "moment": "^2.30.1",
         "react-quill": "^2.0.0",
         "react-select": "^5.10.1"
